--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,11 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>Construction - Ultimate Construction Template</title>
-    <meta name="description" content="Template built for Construction Company, Building Services, Architecture, Engineering, Cleaning Service and other Construction related services">
+    <meta name="viewport">
+    <meta property="twitter:title" content="Twitter link preview title">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content="Twitter link preview image URL">
+    <meta name="description" content="Mana'a Construction Company">
     <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
     <meta name="author" content="blogwp.com">
 
