--- a/index-ar.html
+++ b/index-ar.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ar-SA" lang="ar-SA"><!--<![endif]-->
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>Construction - Ultimate Construction Template</title>
-    <meta name="description" content="Template built for Construction Company, Building Services, Architecture, Engineering, Cleaning Service and other Construction related services">
+    <meta name="description" content="Mana'a Construction Company">
     <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
     <meta name="author" content="blogwp.com">
 
@@ -53,7 +53,7 @@
                         <li class="menu-item current-menu-item"><a href="index-ar.html">الرئيسية</a></li>
                         <li class="menu-item"><a href="gallery-ar.html">المعرض</a></li>
                         <li class="menu-item"><a href="contact-ar.html">تواصل معنا</a></li>
-                        <li class="menu-item"><a href="index.html"><i class="fa fa-globe"></i></a></li>
+                        <li class="menu-item"><a href="/"><i class="fa fa-globe"></i></a></li>
                     </ul>
                 </nav><!-- /#main-nav -->                
             </div>
@@ -107,7 +107,7 @@
                     data-splitout="none"
                     data-responsive_offset="on"
                     data-lasttriggerstate="reset">
-                  بإدارة السيّد: منّاع الأطرش
+                  بإدارة السيّد: منّاع أبو اسنينة
                 </div>
                 <div class="tp-caption"
                     data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
