--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Construction - Ultimate Construction Template</title>
+    <title>Mana'a Stone and Marble Company</title>
     <meta name="description" content="Mana'a Construction Company">
     <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
     <meta name="author" content="blogwp.com">
