--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Construction - Ultimate Construction Template</title>
+    <title>Mana'a Stone and Marble Company</title>
     <meta name="viewport">
     <meta property="twitter:title" content="Twitter link preview title">
     <meta property="twitter:card" content="summary_large_image">
