--- a/contact-ar.html
+++ b/contact-ar.html
@@ -7,8 +7,8 @@
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>تواصل معنا - شركة منّاع للحجر والرخام</title>
     <meta name="description" content="Mana'a Construction Company">
-    <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
-    <meta name="author" content="blogwp.com">
+    <meta name="keywords" content=" حجر, رخام, اعمدة, حجارة, معمار, شركة, بيوت, بناء, مطبة, طبزة, كورنيش, لمعة, مط">
+  
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
