--- a/gallery.html
+++ b/gallery.html
@@ -5,14 +5,14 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Mana'a Stone and Marble Company</title>
+    <title>Gallery - Mana'a Stone and Marble Company</title>
     <meta name="viewport">
     <meta property="twitter:title" content="Twitter link preview title">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="Twitter link preview image URL">
     <meta name="description" content="Mana'a Construction Company">
-    <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
-    <meta name="author" content="blogwp.com">
+    <meta name="keywords" content=" building, architecture, stone, finishes, tobza, bush hammered, polished, grooved">
+   
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
