--- a/index-ar.html
+++ b/index-ar.html
@@ -3,12 +3,12 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ar-SA" lang="ar-SA"><!--<![endif]-->
 <head>
     <!-- Basic Page Needs -->
+     <link rel="canonical">
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>شركة منّاع للحجر والرخام</title>
     <meta name="description" content="Mana'a Construction Company">
-    <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
-    <meta name="author" content="blogwp.com">
+
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -220,7 +220,7 @@
                                     <div class="service-item clearfix text-center">
                                         <div class="thumb"><img src="assets/img/services/4.jpg" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a href="#">Construction Consultant</a></h3>
+                                            <h3 class="title font-size-18"><a href="#">التميز في العمل</a></h3>
                                             <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget arcu.</p>
                                         </div>
                                     </div>
@@ -232,7 +232,7 @@
                                     <div class="service-item clearfix text-center">
                                         <div class="thumb"><img src="assets/img/services/5.jpg" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a href="#">Resconstruction Services</a></h3>
+                                            <h3 class="title font-size-18"><a href="#">فخر الصناعة الوطنية</a></h3>
                                             <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget arcu.</p>
                                         </div>
                                     </div>
@@ -244,7 +244,7 @@
                                     <div class="service-item clearfix text-center">
                                         <div class="thumb"><img src="assets/img/services/6.jpg" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a href="#">Architectural Design</a></h3>
+                                            <h3 class="title font-size-18"><a href="#">مواد عالية الجودة</a></h3>
                                             <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget.</p>
                                         </div>
                                     </div>
@@ -268,7 +268,7 @@
                                 <div class="col-md-4">
                                     <div class="wprt-counter text-center accent-type">
                                         <div class="number" data-speed="5000" data-to="1240" data-in-viewport="yes">1240</div>
-                                        <div class="text">PROJECT COMPLETED</div>
+                                        <div class="text">ٌورشاتٌ منجزة</div>
                                     </div>
 
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
@@ -277,7 +277,7 @@
                                 <div class="col-md-4">
                                     <div class="wprt-counter text-center accent-type has-plus">
                                         <div class="number" data-speed="5000" data-to="1750" data-in-viewport="yes">1750</div>
-                                        <div class="text">HAPPY CLIENTS</div>
+                                        <div class="text">ٌعملاءٌ سعداء</div>
                                     </div>
 
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
@@ -286,7 +286,7 @@
                                 <div class="col-md-4">
                                     <div class="wprt-counter text-center accent-type">
                                         <div class="number" data-speed="5000" data-to="96" data-in-viewport="yes">96</div>
-                                        <div class="text">AWARDS WON</div>
+                                        <div class="text">تهاني وتبريكات</div>
                                     </div>
                                 </div><!-- /.col-md-3 -->
 
@@ -304,7 +304,7 @@
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
 
-                                    <h2 class="text-center margin-bottom-20">RECENT WORKS</h2>
+                                    <h2 class="text-center margin-bottom-20">أعمالنا الحديثة</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
@@ -317,25 +317,25 @@
                         <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
                             <div id="project-filter">
                                 <div data-filter="*" class="cbp-filter-item">
-                                    <span>All</span>
+                                    <span>الكل</span>
                                 </div>
                                 <div data-filter=".architecture" class="cbp-filter-item">
-                                    <span>Architecture</span>
+                                    <span>فن العمارة</span>
                                 </div>
                                 <div data-filter=".building" class="cbp-filter-item">
-                                    <span>Building</span>
+                                    <span>البناء</span>
                                 </div>
                                 <div data-filter=".garden" class="cbp-filter-item">
-                                    <span>Garden</span>
+                                    <span>الحدائق</span>
                                 </div>
                                 <div data-filter=".interior" class="cbp-filter-item">
-                                    <span>Interior</span>
+                                    <span>الديكور</span>
                                 </div>
                                 <div data-filter=".office" class="cbp-filter-item">
-                                    <span>Office</span>
+                                    <span>المكاتب</span>
                                 </div>
                                 <div data-filter=".workspace" class="cbp-filter-item">
-                                    <span>Workspace</span>
+                                    <span>مساحات العمل</span>
                                 </div>
                             </div><!-- /#project-filter -->
 
@@ -525,7 +525,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                                    <h2 class="text-center margin-bottom-20">OUR TEAM</h2>
+                                    <h2 class="text-center margin-bottom-20">فريقنا</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
@@ -549,7 +549,7 @@
                                                              </ul>
                                                         </div>
                                                         <div class="texts">
-                                                            <h4 class="name">Mana'a Alatrash</h4>
+                                                            <h4 class="name">منّاع أبو اسنينة</h4>
                                                             <div class="position">CEO</div>
                                                         </div>
                                                     </div>
