--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
 <head>
     <!-- Basic Page Needs -->
-    <link rel="canonical">
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>Mana'a Stone and Marble Company</title>
     <meta name="description" content="Manaa's Construction Company">
-    <meta name="keywords" content=" architecture, builder, building, building company, cleaning services, construction, construction business, construction company">
-    <meta name="author" content="blogwp.com">
+    <meta name="keywords" content=" building, architecture, stone, finishes, tobza, bush hammered, polished, grooved">
+
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -550,7 +549,7 @@
                                                              </ul>
                                                         </div>
                                                         <div class="texts">
-                                                            <h4 class="name">Mana'a Alatrash</h4>
+                                                            <h4 class="name">Mana'a Abu Snaineh</h4>
                                                             <div class="position">CEO</div>
                                                         </div>
                                                     </div>
