--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="wrap-inner">          
                 <div id="site-logo" class="clearfix">
                     <div id="site-logo-inner">
-                        <a href="index.html" title="Mana'a" rel="home" class="main-logo">
+                        <a href="/" title="Mana'a" rel="home" class="main-logo">
                             <img width="55" src="assets/img/logo.svg" alt="Mnaa" data-retina="assets/img/logo.svg" data-width="55" data-height="55">
                         </a>
                     </div>
@@ -50,7 +50,7 @@
 
                 <nav id="main-nav" class="main-nav">
                     <ul class="menu">
-                        <li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
+                        <li class="menu-item current-menu-item"><a href="/">Home</a></li>
                         <li class="menu-item"><a href="gallery.html">Gallery</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                         <li label="Arabic" class=""><a href="index-ar.html"><i class="fa fa-globe"></i></a></li>
