--- a/gallery-ar.html
+++ b/gallery-ar.html
@@ -40,7 +40,7 @@
             <div class="wrap-inner">          
                 <div id="site-logo" class="clearfix">
                     <div id="site-logo-inner">
-                        <a href="index.html" title="Mana'a" rel="home" class="main-logo">
+                        <a href="index-ar.html" title="Mana'a" rel="home" class="main-logo">
                             <img width="55" src="assets/img/logo.svg" alt="Mnaa" data-retina="assets/img/logo.svg" data-width="45" data-height="20">
                         </a>
                     </div>
@@ -504,7 +504,7 @@
 </div><!-- /#page -->
 </div><!-- /#wrapper -->
 
-<a id="scroll-top">TOP</a>
+<a id="scroll-top">إلى الاعلى</a>
 
 <!-- Javascript -->
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
