--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
             <div class="wrap-inner">          
                 <div id="site-logo" class="clearfix">
                     <div id="site-logo-inner">
-                        <a href="index.html" title="Mana'a" rel="home" class="main-logo">
+                        <a href="/" title="Mana'a" rel="home" class="main-logo">
                             <img width="55" src="assets/img/logo.svg" alt="Mnaa" data-retina="assets/img/logo.svg" data-width="45" data-height="20">
                         </a>
                     </div>
@@ -54,7 +54,7 @@
 
                 <nav id="main-nav" class="main-nav">
                     <ul class="menu">
-                        <li class="menu-item "><a href="index.html">Home</a>
+                        <li class="menu-item "><a href="/">Home</a>
                         </li>
                         <li class="menu-item current-menu-item"><a href="gallery.html">Gallery</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
