--- a/index-ar.html
+++ b/index-ar.html
@@ -40,7 +40,7 @@
             <div class="wrap-inner">          
                 <div id="site-logo" class="clearfix">
                     <div id="site-logo-inner">
-                        <a href="index.html" title="Mana'a" rel="home" class="main-logo">
+                        <a href="index-ar.html" title="Mana'a" rel="home" class="main-logo">
                             <img width="55" src="assets/img/logo.svg" alt="Mnaa" data-retina="assets/img/logo.svg" data-width="55" data-height="55">
                         </a>
                     </div>
@@ -316,8 +316,8 @@
 
                         <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
                             <div id="project-filter">
-                                <div data-filter="*" class="cbp-filter-item">
-                                    <span>الكل</span>
+                                <div data-filter=".workspace" class="cbp-filter-item">
+                                    <span>مساحات العمل</span>
                                 </div>
                                 <div data-filter=".architecture" class="cbp-filter-item">
                                     <span>فن العمارة</span>
@@ -334,8 +334,8 @@
                                 <div data-filter=".office" class="cbp-filter-item">
                                     <span>المكاتب</span>
                                 </div>
-                                <div data-filter=".workspace" class="cbp-filter-item">
-                                    <span>مساحات العمل</span>
+                                <div data-filter="*" class="cbp-filter-item">
+                                    <span>الكل</span>
                                 </div>
                             </div><!-- /#project-filter -->
 
@@ -667,7 +667,7 @@
 </div><!-- /#page -->
 </div><!-- /#wrapper -->
 
-<a id="scroll-top">TOP</a>
+<a id="scroll-top">إلى الاعلى</a>
 
 <!-- Javascript -->
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
