--- a/gallery-ar.html
+++ b/gallery-ar.html
@@ -95,7 +95,7 @@
                                 </div>
 
                                 <div class="col-md-12">
-                                    <h3 class="text-center margin-bottom-10">CAROUSEL</h3>
+                                    <h3 class="text-center margin-bottom-10">حجر ملطّش</h3>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
@@ -105,77 +105,77 @@
                                         <div id="images-wrap" class="cbp">
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/1.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/1.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/6.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/6.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
                                             
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/9.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/9.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/45.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/45.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/3.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/48.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/48.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/4.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/4.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/49.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/49.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/50.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/50.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/51.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/51.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/3.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/52.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/52.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/4.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/4.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/71.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/71.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
                                         </div><!-- /#images-wrap -->
                                     </div><!--/.wprt-galleries-grid -->
                                 </div>
                                 <div class="col-md-12">
-                                    <h3 class="text-center margin-bottom-10">CAROUSEL</h3>
+                                    <h3 class="text-center margin-bottom-10 margin-top-20">حجر طبزة</h3>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
@@ -185,70 +185,93 @@
                                         <div id="images-wrap" class="cbp">
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/17.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/17.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/18.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/18.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
                                             
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/19.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/19.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/20.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/20.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/3.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/21.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/21.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/4.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/4.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/22.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/22.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/23.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/23.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/46.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/46.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/3.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/47.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/47.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
 
                                             <div class="cbp-item">
                                                 <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/4.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/4.jpg" alt="image" />
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/54.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/54.png" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/55.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/55.png" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/56.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/56.png" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item --><div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/57.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/57.png" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/Stone/fscreen/58.png"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/thumbs/58.png" alt="image" />
                                                 </div>
                                             </div><!--/.cbp-item -->
                                         </div><!-- /#images-wrap -->
