Gallery Update - Update

--- a/contact-ar.html
+++ b/contact-ar.html
@@ -133,7 +133,7 @@
                                                     <input type="email" value="" tabindex="2" placeholder="البريد الإلكتروني *" name="email" id="email" required>
                                                 </div>
                                                 <div class="input-wrap">
-                                                    <input type="text" value="" tabindex="4" placeholder="Subject *" name="subject" id="subject" required>
+                                                    <input type="text" value="" tabindex="4" placeholder="الموضوع*" name="subject" id="subject" required>
                                                 </div>
                                                 <div class="message-wrap">
                                                     <textarea class="" tabindex="5" placeholder="الرسالة *" name="message" id="message" required></textarea>
@@ -193,7 +193,7 @@
 </div><!-- /#page -->
 </div><!-- /#wrapper -->
 
-<a id="scroll-top">إلى الاعلى</a>
+<a id="scroll-top">فوق</a>
 
 <!-- Javascript -->
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
