--- a/index-ar.html
+++ b/index-ar.html
@@ -66,9 +66,9 @@
     <div id="rev-slider1" class="rev_slider fullwidthabanner">
         <ul>
             <!-- Slide -->
-            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/1.jpg" data-rotate="0" data-saveperformance="off" data-title="STONE">
+            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/DJI_0028.JPG" data-rotate="0" data-saveperformance="off" data-title="">
                 <!-- Main Image -->
-                <img src="assets/img/slider/1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
+                <img src="assets/img/slider/DJI_0028.JPG" alt="S" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white text-shadow font-weight-500"
                     data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -132,7 +132,7 @@
             <!-- End Slide -->
 
             <!-- Slide -->
-            <li data-transition="boxfade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/2.jpg" data-rotate="0" data-saveperformance="off" data-title="MARBLE">
+            <li data-transition="boxfade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/2.jpg" data-rotate="0" data-saveperformance="off" data-title="">
                 <!-- Main Image -->
                 <img src="assets/img/slider/2.jpg" alt="" data-bgposition="center center" data-no-retina>
                 <!-- Layers -->
@@ -667,7 +667,7 @@
 </div><!-- /#page -->
 </div><!-- /#wrapper -->
 
-<a id="scroll-top">إلى الاعلى</a>
+<a id="scroll-top">فوق</a>
 
 <!-- Javascript -->
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
