--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div id="rev-slider1" class="rev_slider fullwidthabanner">
         <ul>
             <!-- Slide -->
-            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/1.jpg" data-rotate="0" data-saveperformance="off" data-title="STONE">
+            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/DJI_0028.JPG" data-rotate="0" data-saveperformance="off" data-title="STONE">
                 <!-- Main Image -->
-                <img src="assets/img/slider/1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
+                <img src="assets/img/slider/DJI_0028.JPG" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white font-family-heading text-shadow font-weight-500"
                     data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
