--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div id="rev-slider1" class="rev_slider fullwidthabanner">
         <ul>
             <!-- Slide -->
-            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/IMG_2098.JPG" data-rotate="0" data-saveperformance="off" data-title="STONE">
+            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/IMG_2179.JPG" data-rotate="0" data-saveperformance="off" data-title="STONE">
                 <!-- Main Image -->
-                <img src="assets/img/slider/IMG_2098.JPG" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
+                <img src="assets/img/slider/IMG_2179.JPG" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white font-family-heading text-shadow font-weight-500"
                     data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -132,9 +132,9 @@
             <!-- End Slide -->
 
             <!-- Slide -->
-            <li data-transition="boxfade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/IMG_2099.JPG" data-rotate="0" data-saveperformance="off" data-title="MARBLE">
+            <li data-transition="fade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/IMG_2183.JPG" data-rotate="0" data-saveperformance="off" data-title="MARBLE">
                 <!-- Main Image -->
-                <img src="assets/img/slider/IMG_2099.JPG" alt="" data-bgposition="center center" data-no-retina>
+                <img src="assets/img/slider/IMG_2183.JPG" alt="" data-bgposition="center center" data-no-retina>
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white font-family-heading text-shadow font-weight-500"
                     data-x="['left','left','left','left']" data-hoffset="['50','30','30','30']"
@@ -215,40 +215,31 @@
                                     <div class="wprt-spacer" data-desktop="110" data-mobi="40" data-smobi="40"></div>
                                 </div><!-- /.col-md-12 -->
 
-                                <div class="col-md-4">
+                                <div class="col-md-6">
 
                                     <div class="service-item clearfix text-center">
-                                        <div class="thumb"><img src="assets/img/services/4.jpg" alt="image" /></div>
+                                        <div class="thumb"><img src="assets/img/Stone/port/IMG_2171.JPG" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a href="#">Construction Consultant</a></h3>
-                                            <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget arcu.</p>
+                                            <h3 class="title font-size-18"><a href="assets/img/Stone/port/IMG_2171.JPG">Remarkable Designs</a></h3>
+                                           
                                         </div>
                                     </div>
 
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="40" data-smobi="40"></div>
                                 </div><!-- /.col-md-4 -->
 
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <div class="service-item clearfix text-center">
-                                        <div class="thumb"><img src="assets/img/services/5.jpg" alt="image" /></div>
+                                        <div class="thumb"><img src="assets/img/Stone/port/IMG_2185.JPG" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a href="#">Resconstruction Services</a></h3>
-                                            <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget arcu.</p>
+                                            <h3 class="title font-size-18"><a href="assets/img/Stone/port/IMG_2185.JPG">Unique Works</a></h3>
+                                           
                                         </div>
                                     </div>
 
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="40" data-smobi="40"></div>
                                 </div><!-- /.col-md-4 -->
 
-                                <div class="col-md-4">
-                                    <div class="service-item clearfix text-center">
-                                        <div class="thumb"><img src="assets/img/services/6.jpg" alt="image" /></div>
-                                        <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a href="#">Architectural Design</a></h3>
-                                            <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget.</p>
-                                        </div>
-                                    </div>
-                                </div><!-- /.col-md-4 -->
 
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="110" data-mobi="40" data-smobi="40"></div>
