--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
+<head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <title>Mana'a Stone and Marble Company</title>
