Contact Page Update

--- a/contact-ar.html
+++ b/contact-ar.html
@@ -88,8 +88,8 @@
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
                     <section class="wprt-section">
-                        <div id="gmap" class="wprt-map-1"></div>
-                        <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
+                    <!--    <div id="gmap" class="wprt-map-1"></div> 
+                        <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div> -->
 
                         <div class="container">
                             <div class="row">
@@ -106,18 +106,18 @@
                                 </div><!-- /.col-md-12 -->
 
                                 <div class="col-md-4">
-                                    <h5>العنوان</h5>
+                                    <h5><i class="fa fa-map-marker">&nbsp;</i>العنوان</h5>
                                     <p>المنطقة الصناعية<br> الخليل, فلسطين</p>
 
                                     <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
 
-                                    <h5>رقم الهاتف</h5>
+                                    <h5><i class="fa fa-phone">&nbsp;</i>رقم الهاتف</h5>
                                     <p>+970-599226446 <br> +972-522226446</p>
 
                                     <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
 
-                                    <h5>البريد الإلكتروني</h5>
-                                    <p>mnaa.co.1980@gmail.com</p>
+                                    <h5><i class="fa fa-envelope-o">&nbsp;</i>البريد الإلكتروني</h5>
+                                    <p><a href="mailto:mnaa.co.1980@gmail.com?&subject=Inquiry%20">mnaa.co.1980@gmail.com</a></p>
 
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="10" data-smobi="10"></div>
                                 </div><!-- /.col-md-4 -->
@@ -168,7 +168,7 @@
                 <div id="footer-widgets">
                     <div class="widget widget_socials">
                         <div class="socials text-center">
-                            <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
+                            <a target="_blank" href="https://api.whatsapp.com/send?phone=972522226446"><i class="fa fa-whatsapp"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
 
