--- a/index-ar.html
+++ b/index-ar.html
@@ -516,7 +516,7 @@
                 <div id="footer-widgets">
                     <div class="widget widget_socials">
                         <div class="socials text-center">
-                            <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
+                            <a target="_blank" href="https://api.whatsapp.com/send?phone=972522226446"><i class="fa fa-whatsapp"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
 
