--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>Contact - Mana'a Stone and Marble Company</title>
     <meta name="description" content="Mana'a Construction Company">
     <meta name="keywords" content=" building, architecture, stone, finishes, tobza, bush hammered, polished, grooved">
@@ -19,11 +17,7 @@
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="assets/icon/favicon.svg">
     <link rel="apple-touch-icon-precomposed" href="assets/icon/logo(158x158).svg">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  
 </head>
 
 <body class="page no-sidebar header-style-1 menu-has-search menu-has-cart">
@@ -88,8 +82,8 @@
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
                     <section class="wprt-section">
-                        <div id="gmap" class="wprt-map-1"></div>
-                        <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
+                        <!--<div id="gmap" class="wprt-map-1"></div> -->
+                       <!-- <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div> -->
 
                         <div class="container">
                             <div class="row">
@@ -106,18 +100,18 @@
                                 </div><!-- /.col-md-12 -->
 
                                 <div class="col-md-4">
-                                    <h5>Address</h5>
+                                    <h5><i class="fa fa-map-marker">&nbsp;</i>Address</h5>
                                     <p>Industrial Zone<br> Hebron, Palestine</p>
 
                                     <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
 
-                                    <h5>Phone number</h5>
+                                    <h5><i class="fa fa-phone">&nbsp;</i>Phone number</h5>
                                     <p>+970-599226446 <br> +972-522226446</p>
 
                                     <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
 
-                                    <h5>E-mail address</h5>
-                                    <p>mnaa.co.1980@gmail.com</p>
+                                    <h5><i class="fa fa-envelope-o">&nbsp;</i>Email address</h5>
+                                    <p><a href="mailto:mnaa.co.1980@gmail.com?&subject=Inquiry%20">mnaa.co.1980@gmail.com</a></p>
 
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="10" data-smobi="10"></div>
                                 </div><!-- /.col-md-4 -->
@@ -168,7 +162,7 @@
                 <div id="footer-widgets">
                     <div class="widget widget_socials">
                         <div class="socials text-center">
-                            <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
+                            <a target="_blank" href="https://api.whatsapp.com/send?phone=972522226446"><i class="fa fa-whatsapp"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
 
